--- a/wiki/index.html
+++ b/wiki/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="av-thin">
 			<div class="aeroventures-title">
-				<a href="../index.html" id="aeroventures-title">Aeroventures!</a>
+				<a href="../index.html" id="aeroventures-title">Aeroventu</a><a href="../comics/index.html?c=dk" id="aeroventures-title">r</a><a href="../index.html" id="aeroventures-title">es!</a>
 			</div>
 			<div class="w3-bar aero-dblue">
 				<div class="w3-dropdown-hover w3-mobile aero-blue">
