--- a/comics/index.html
+++ b/comics/index.html
@@ -40,7 +40,7 @@
 					</div>
 				</div>
 				<a href="" class="w3-bar-item w3-button w3-mobile nyork-green">Discord Invite</a>
-				<a href="../wiki/index.html" class="w3-bar-item w3-button w3-mobile aero-blue">Wiki</a>
+				<a href="../wiki/index.html?p=main" class="w3-bar-item w3-button w3-mobile aero-blue">Wiki</a>
 			</div>
 			
 			<div class="slideshow-container">
