--- a/wiki/index.html
+++ b/wiki/index.html
@@ -48,7 +48,7 @@
 			<script>
 				let page = new URLSearchParams(window.location.search);
 				page = page.get('p')
-				if (page == null) page = "pilf";
+				if (page == null) page = "main";
 				generatePage(page);
 			</script>
 			<!-- WIKI BEGINNING -->
