--- a/wiki/index.html
+++ b/wiki/index.html
@@ -39,7 +39,7 @@
 						<a href="../comics/index.html?c=12-1" class="w3-bar-item w3-button w3-mobile">Aeroventures 12, Part 1</a>
 					</div>
 				</div>
-				<a href="" class="w3-bar-item w3-button w3-mobile nyork-green">Discord Invite</a>
+				<a href="https://discord.gg/xxRvYERs48" class="w3-bar-item w3-button w3-mobile nyork-green">Discord Invite</a>
 				<a href="index.html?p=main" class="w3-bar-item w3-button w3-mobile aero-blue">Wiki</a>
 			</div>
 			
