--- a/index.html
+++ b/index.html
@@ -54,3 +54,45 @@
 		</div>
 	</body>
 </html>
+<!--
+bro stop snooping, aero can see you
+                                               ----///-`                                            
+                                     .-::+ooymmNICEdhdmNmsoo+--.`                                   
+                                 -+ydmNmmdyyy/:-..`` `.::syyhmmNmhy+:`                              
+                          `-:ohmNNds+:.``                    ``..+yddmd+.                           
+                       .ohdNmds/:-`                                ``-ohms-                         
+                     :hmNh+-``                                         `/hNy/                       
+                  `:hmy/-`                                               `:dmh+`                    
+                .ommy-                                                     `-ommy:                  
+              `/mN+.`                                                         ./mNy-                
+             `yNh:                                                              .oNm+`              
+            :dNs`                                                                 .yNd.             
+           +mN/`                                                                   .sNh/`           
+         `/MN:                                                                       :MN:           
+         +Nm:                                                                         oMm`          
+        /mN/                                                                          .dMo          
+       /NN/                     `ohhh+                     -/:`                        +Nm.         
+      `NN+                      .shhy:                    /mMm/                        .dN/         
+      sMd.                        `                       `---`                        `yMy`        
+     /NN:                                                                               oMh`        
+    `sMd`                                                                               oMh`        
+    /NN-                                                                                oMh.        
+   `NM+                                                                                 .NM/        
+   -MN-                                                                                  NM+        
+   yMy`                                                                                  dMy`       
+   yMs`                                  p=tackpenguin                                   :MN.       
+  `hMs`                             `..go away mmmMNdyo/-`                               -MN.       
+  .NN:                          `-+ydNNNdhs+:-````::+hmNMh/.                             -MN.       
+  .Nm:                        .ohNMNmh+.`             .:hmMmy/`                          -NN:       
+  .Nm:                       /mMNh+.                     .sNMMh.                         `yMs       
+  .NN/                      :NNh:`                        `:hNMh-                        `yMs       
+  `hMs`                    :dMh.                             /dMN+.                       +Mm`      
+   yMs`                    `/yNh-`                            .yMMN/                      :NM`      
+   /MN-                       :dNy:`                         `-oMMmh                      -mM/      
+   `mN-                        `odNNo-`                  .-oymNds:`                        saF      
+    .-`                          `-+mNh:`             `:smNms+-`                           sdU      
+                                    `-dMd/.`       .+ydmh/-                                sdC      
+                                      `+ymmdo-...+ymNs+.                                   /dK      
+                                          .yNNMMMmy/.                                               
+                                            ./NO-`                                   
+-->
