--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <meta content="utf-8" http-equiv="encoding">
 <html>
 	<head>
+		<meta charset="utf-8">
+		<meta name="description" content="Aeroventures is a comic series that follows the adventures of Aero, Archie, Lakys, Aposteel, where they travel around and just cause general chaos, whether intentional or not!">
+		<meta name="robots" content="index, follow">
+		<meta property="og:image" content="favicon.png">
+		<meta property="og:image:width" content="54">
+		<meta property="og:image:height" content="54">
 		<title>Aeroventures!</title>
 		<link rel="icon" type="image/png" href="favicon.png">
 		<link rel="stylesheet" href="index.css">
