--- a/wiki/index.html
+++ b/wiki/index.html
@@ -3,48 +3,19 @@
 <meta content="utf-8" http-equiv="encoding">
 <html>
 	<head>
+		<meta charset="utf-8">
+		<meta name="description" content="Aeroventures is a comic series that follows the adventures of Aero, Archie, Lakys, Aposteel, where they travel around and just cause general chaos, whether intentional or not!">
+		<meta name="robots" content="index, follow">
+		<meta property="og:image" content="favicon.png">
+		<meta property="og:image:width" content="54">
+		<meta property="og:image:height" content="54">
 		<title>Aeroventures!</title>
-		<link rel="icon" type="image/png" href="../favicon.png">
+		<link rel="icon" type="image/png" href="favicon.png">
 		<link rel="stylesheet" href="../index.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,700">
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	</head>
-	<body>
-		<div class="av-thin">
-			<div class="aeroventures-title">
-				<a href="../index.html" id="aeroventures-title">Aeroventu</a><a href="../comics/index.html?c=dk" id="aeroventures-title">r</a><a href="../index.html" id="aeroventures-title">es!</a>
-			</div>
-			<div class="w3-bar aero-dblue">
-				<div class="w3-dropdown-hover w3-mobile aero-blue">
-					<button class="w3-button">The Legacy Comics &#9662;</button>
-					<div class="w3-dropdown-content w3-bar-block aero-blue">
-						<a href="../comics/index.html?c=1" class="w3-bar-item w3-button w3-mobile">Aeroventures 1</a>
-						<a href="../comics/index.html?c=2" class="w3-bar-item w3-button w3-mobile">Aeroventures 2</a>
-						<a href="../comics/index.html?c=3" class="w3-bar-item w3-button w3-mobile">Aeroventures 3</a>
-						<a href="../comics/index.html?c=4" class="w3-bar-item w3-button w3-mobile">Aeroventures 4</a>
-						<a href="../comics/index.html?c=5" class="w3-bar-item w3-button w3-mobile">Aeroventures 5</a>
-					</div>
-				</div>
-				<div class="w3-dropdown-hover w3-mobile pon-pink">
-					<button class="w3-button">The Modern Comics &#9662;</button>
-					<div class="w3-dropdown-content w3-bar-block pon-pink">
-						<a href="../comics/index.html?c=6" class="w3-bar-item w3-button w3-mobile">Aeroventures 6</a>
-						<a href="../comics/index.html?c=7" class="w3-bar-item w3-button w3-mobile">Aeroventures 7</a>
-						<a href="../comics/index.html?c=8" class="w3-bar-item w3-button w3-mobile">Aeroventures 8</a>
-						<a href="../comics/index.html?c=9" class="w3-bar-item w3-button w3-mobile">Aeroventures 9</a>
-						<a href="../comics/index.html?c=10" class="w3-bar-item w3-button w3-mobile">Aeroventures 10</a>
-						<a href="../comics/index.html?c=10.5" class="w3-bar-item w3-button w3-mobile">Aeroventures 10.5</a>
-						<a href="../comics/index.html?c=h" class="w3-bar-item w3-button w3-mobile">Aeroventures Halloween Edition</a>
-						<a href="../comics/index.html?c=11" class="w3-bar-item w3-button w3-mobile">Aeroventures 11</a>
-						<a href="../comics/index.html?c=12-1" class="w3-bar-item w3-button w3-mobile">Aeroventures 12, Part 1</a>
-					</div>
-				</div>
-				<!--a href="https://discord.gg/xxRvYERs48" class="w3-bar-item w3-button w3-mobile nyork-green">Discord Invite</a-->
-				<a href="index.html?p=main" class="w3-bar-item w3-button w3-mobile aero-blue">Wiki</a>
-			</div>
-			
-			<script src="scripts/pagesetup.js"></script> 
-
-		</div>
+	<body onload="makePage('wiki')">
+		<script src="../scripts/mainSetup.js"></script>
 	</body>
 </html>
