--- a/comics/index.html
+++ b/comics/index.html
@@ -3,19 +3,51 @@
 <meta content="utf-8" http-equiv="encoding">
 <html>
 	<head>
-		<meta charset="utf-8">
-		<meta name="description" content="Aeroventures is a comic series that follows the adventures of Aero, Archie, Lakys, Aposteel, where they travel around and just cause general chaos, whether intentional or not!">
-		<meta name="robots" content="index, follow">
-		<meta property="og:image" content="favicon.png">
-		<meta property="og:image:width" content="54">
-		<meta property="og:image:height" content="54">
-		<title>Aeroventures!</title>
-		<link rel="icon" type="image/png" href="favicon.png">
-		<link rel="stylesheet" href="../index.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,700">
-		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	</head>
 	<body onload="makePage('comic')">
 		<script src="../scripts/mainSetup.js"></script>
 	</body>
 </html>
+
+<!--
+bro stop snooping, aero can see you
+                                               ----///-`                                            
+                                     .-::+ooymmNICEdhdmNmsoo+--.`                                   
+                                 -+ydmNmmdyyy/:-..`` `.::syyhmmNmhy+:`                              
+                          `-:ohmNNds+:.``                    ``..+yddmd+.                           
+                       .ohdNmds/:-`                                ``-ohms-                         
+                     :hmNh+-``                                         `/hNy/                       
+                  `:hmy/-`                                               `:dmh+`                    
+                .ommy-                                                     `-ommy:                  
+              `/mN+.`                                                         ./mNy-                
+             `yNh:                                                              .oNm+`              
+            :dNs`                                                                 .yNd.             
+           +mN/`                                                                   .sNh/`           
+         `/MN:                                                                       :MN:           
+         +Nm:                                                                         oMm`          
+        /mN/                                                                          .dMo          
+       /NN/                     `ohhh+                     -/:`                        +Nm.         
+      `NN+                      .shhy:                    /mMm/                        .dN/         
+      sMd.                        `                       `---`                        `yMy`        
+     /NN:                                                                               oMh`        
+    `sMd`                                                                               oMh`        
+    /NN-                                                                                oMh.        
+   `NM+                                                                                 .NM/        
+   -MN-                                                                                  NM+        
+   yMy`                                                                                  dMy`       
+   yMs`                                  p=tackpenguin                                   :MN.       
+  `hMs`                             `..go away mmmMNdyo/-`                               -MN.       
+  .NN:                          `-+ydNNNdhs+:-````::+hmNMh/.                             -MN.       
+  .Nm:                        .ohNMNmh+.`             .:hmMmy/`                          -NN:       
+  .Nm:                       /mMNh+.                     .sNMMh.                         `yMs       
+  .NN/                      :NNh:`                        `:hNMh-                        `yMs       
+  `hMs`                    :dMh.                             /dMN+.                       +Mm`      
+   yMs`                    `/yNh-`                            .yMMN/                      :NM`      
+   /MN-                       :dNy:`                         `-oMMmh                      -mM/      
+   `mN-                        `odNNo-`                  .-oymNds:`                        saF      
+    .-`                          `-+mNh:`             `:smNms+-`                           sdU      
+                                    `-dMd/.`       .+ydmh/-                                sdC      
+                                      `+ymmdo-...+ymNs+.                                   /dK      
+                                          .yNNMMMmy/.                                               
+                                            ./NO-`                                   
+-->
