--- a/comics/index.html
+++ b/comics/index.html
@@ -5,7 +5,7 @@
 	<head>
 	</head>
 	<body onload="makePage('comic')">
-		<script src="../scripts/mainSetup.js"></script>
+		<script src="../scripts/generalSetup.js"></script>
 	</body>
 </html>
 
