--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<head>
 	</head>
 	<body onload="makePage('main')">
-		<script src="./scripts/mainSetup.js"></script>
+		<script src="./scripts/generalSetup.js"></script>
 	</body>
 </html>
 
