Maybe this will make embeds work?

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
-<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-<meta content="utf-8" http-equiv="encoding">
 <html>
 	<head>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+		<meta content="utf-8" http-equiv="encoding">
+		<meta content="Metaventures is the name of a collective of ideas; Aeroventures, Polyventures, and more!" name="description">
 	</head>
 	<body onload="makePage('main')">
 		<script src="./scripts/generalSetup.js"></script>
