Updated index.html info

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML>
+<html lang="en">
 <html>
 	<head>
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
-		<meta content="Metaventures is the name of a collective of ideas; Aeroventures, Polyventures, and more!" name="description">
-	</head>
+		<meta name="description" content="Metaventures is the name of a collective of ideas; Aeroventures, Polyventures, and more!">
+    <meta name="author" content="Fillygroove, Gramiatar, Hyphogen (Text Wall)"/>
+  </head>
 	<body onload="makePage('main')">
 		<script src="./scripts/generalSetup.js"></script>
 	</body>
