--- a/comics/index.html
+++ b/comics/index.html
@@ -6,6 +6,7 @@
 		<meta content="utf-8" http-equiv="encoding">
 		<meta name="description" content="Metaventures is the name of a collective of ideas; Aeroventures, Polyventures, and more!">
 		<meta name="author" content="Fillygroove, Gramiatar, Hyphogen (Text Wall)"/>
+		<title>Metaventures | The Comics</title>
 	</head>
 	<body onload="makePage('comic')">
 		<script src="../scripts/generalSetup.js"></script>
