--- a/wiki/images/index.html
+++ b/wiki/images/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
     <meta content="utf-8" http-equiv="encoding">
-    <title>Aeroventures!</title>
+    <meta name="description" content="aroventur 1 :)">
+    <meta name="author" content="Fillygroove, Gramiatar, Hyphogen (Text Wall)"/>
+    <title>aroventur 1 :)</title>
     <link rel="icon" type="image/png" href="../../images/original_favicon.png">
 </head>
 <style>
@@ -118,7 +120,8 @@
         <input type="text" id="panel" name="panel" onkeypress="return isNumber(event)">
     </div>
 
-    <p>WELCOME TO: retro mode december 2 2019</p>
+    <p>WELCOME TO: retro mode december 2 20</p>
+    <p><a href="../../">bak 2 the year: the future</a></p>
 
     <script>
         let slideIndex = 1;
