Fixed Manc-ave's symbol.

--- a/scripts/index.html
+++ b/scripts/index.html
@@ -6,7 +6,7 @@
 		<meta content="utf-8" http-equiv="encoding">
 		<meta name="description" content="Metaventures is the name of a collective of ideas; Aeroventures, Polyventures, and more!">
 		<meta name="author" content="Fillygroove, Gramiatar, Hyphogen (Text Wall)">
-        <meta http-equiv="Refresh" content="0; url='../wiki/?p=snoop'">
+        <meta http-equiv="Refresh" content="0; url='../wiki/?p=script'">
 		<title>Metaventures | Redirect</title>
 	</head>
 </html>
