--- a/journal/images/index.html
+++ b/journal/images/index.html
@@ -92,20 +92,20 @@
     <div class="slideshow-container">
         <div class="mySlides fade" style="display: block;">
             <div class="numbertext">1 / 4</div>
-            <img src="../../comics/panels/old-av/av-1/1.jpg">
+            <img src="../../comics/av/1/panels/1.jpg">
         </div>
         <div class="mySlides fade" style="display: none;">
             <div class="numbertext">2 / 4</div>
-            <img src="../../comics/panels/old-av/av-1/2.jpg">
+            <img src="../../comics/av/1/panels/2.jpg">
         </div>
         <div class="mySlides fade" style="display: none;">
             <div class="numbertext">3 / 4</div>
-            <img src="../../comics/panels/old-av/av-1/3.jpg">
+            <img src="../../comics/av/1/panels/3.jpg">
             <p>In this magestic panel, Archie fucking dies</p>
         </div>
         <div class="mySlides fade" style="display: none;">
             <div class="numbertext">4 / 4</div>
-            <img src="../../comics/panels/old-av/av-1/4.jpg">
+            <img src="../../comics/av/1/panels/4.jpg">
         </div>
 
         <a class="prev" onclick="plusSlides(-1)">◀</a>
